# graphics_proj

./: .gitignore  Project Summary.docx  README.md  index.html  package.json  params.json  tsconfig.json
glsl_examples/: madlebr.glsl
glsl_hacking/: cmm.glsl  hex3.glsl  hex3_mouse.glsl  hypot.glsl  p3m1.glsl  p4_square_fn.glsl  p6m.glsl
src/: index.html
src/coffee/: main.js  main.js.map
src/css/: dat.gui.css  main.css
src/glsl/: cm.glsl  cmm.glsl  hex3.glsl  hex6.glsl  p1_gen_fn.glsl  p2_gen_paired_fn.glsl  p31m.glsl  p3m1.glsl  p4_square_fn.glsl  p4g.glsl  p4m.glsl  p6m.glsl  pg.glsl  pgg.glsl  pm.glsl  pmg.glsl  pmm.glsl  test_p1
src/js/: jquery.js
src/presets/: waves.json
src/ts/: dat.gui.d.ts  dat_extension.ts  jquery.d.ts  main.js  main.js.map  main.ts  my_components.ts  primitives.ts  three.d.ts
symmetryworks-research-bowdoin/: CMakeLists.txt  Makefile
webstorm/: README.md  gulpfile.js  package.json
webstorm/glsl_hacking/: domain_coloring_fn.glsl  gen_fn.glsl  gen_paired_fn.glsl  hex3.glsl  hex6.glsl  loc_sym_fn.glsl  p1_gen_fn.glsl  p2_gen_paired_fn.glsl  p31m.glsl  p6m.glsl  symmetry-group-function-name-mapping.txt
webstorm/src/: index.html
webstorm/src/coffee/: main.coffee
webstorm/src/css/: dat.gui.css  main.css
webstorm/src/glsl/: cm.glsl  cmm.glsl  gen_fn.glsl  hex3.glsl  hex6.glsl  p1_gen_fn.glsl  p2_gen_paired_fn.glsl  p31m.glsl  p3m1.glsl  p4_square_fn.glsl  p4g.glsl  p4m.glsl  p6m.glsl  pm.glsl  pmg.glsl
webstorm/src/js/: main.js
webstorm/src/ts/: MainInterface.ts  dat.gui.d.ts  main.js  main.js.map  main.ts
